--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+hyper = { version = "1", features = ["full", "http1", "http2"] }
 libc = "0.2.178"
 socket2 = "0.6.1"
 tokio = { version = "1", features = ["full"] }
