--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ base64 = "0.22.1"
 futures-util = "0.3.31"
 http-body-util = "0.1.3"
 hyper = { version = "1", features = ["full", "http1", "http2"] }
+hyper-rustls = "0.27.7"
 hyper-util = { version = "0.1.18", features = ["full"] }
 libc = "0.2.178"
 sha1 = "0.10.6"
 socket2 = "0.6.1"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.28.0"
+tracing = "0.1.43"
