--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "tinspect"
 version = "0.1.0"
 edition = "2024"
 
+authors = ["metastable-void"]
+description = "HTTP(S)/WebSocket MITM inspection proxy."
+license = "Apache-2.0 OR MPL-2.0"
+readme = "README.md"
+repository = "https://github.com/metastable-void/tinspect"
+homepage = "https://github.com/metastable-void/tinspect"
+
 [dependencies]
 base64 = "0.22.1"
 dashmap = "6.1.0"
