--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ homepage = "https://github.com/metastable-void/tinspect"
 base64 = "0.22.1"
 dashmap = "6.1.0"
 futures-util = "0.3.31"
+hickory-proto = "0.25.2"
 http-body-util = "0.1.3"
 hyper = { version = "1", features = ["full", "http1", "http2"] }
 hyper-rustls = "0.27.7"
