--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ base64 = "0.22.1"
 dashmap = "6.1.0"
 futures-util = "0.3.31"
 hickory-proto = "0.25.2"
+hickory-resolver = "0.25.2"
 http-body-util = "0.1.3"
 hyper = { version = "1", features = ["full", "http1", "http2"] }
 hyper-rustls = "0.27.7"
