--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ tokio-rustls = "0.26.4"
 tokio-tungstenite = "0.28.0"
 tracing = "0.1.43"
 webpki-roots = "1.0.4"
+
+[dev-dependencies]
+clap = { version = "4.5", features = ["derive"] }
