--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ homepage = "https://github.com/metastable-void/tinspect"
 
 [dependencies]
 base64 = "0.22.1"
-dashmap = "6.1.0"
+bytes = "1.7.1"
 futures-util = "0.3.31"
 hickory-proto = "0.25.2"
 hickory-resolver = "0.25.2"
@@ -20,6 +20,7 @@ http-body-util = "0.1.3"
 hyper = { version = "1", features = ["full", "http1", "http2"] }
 hyper-rustls = "0.27.7"
 hyper-util = { version = "0.1.18", features = ["full"] }
+lru = "0.12.5"
 libc = "0.2.178"
 rcgen = { version = "0.14.5", default-features = false, features = ["crypto", "aws_lc_rs", "pem", "x509-parser"] }
 rustls = "0.23.35"
