--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ webpki-roots = "1.0.4"
 
 [dev-dependencies]
 clap = { version = "4.5", features = ["derive"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
