--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ sha1 = "0.10.6"
 socket2 = "0.6.1"
 tokio = { version = "1", features = ["full"] }
 tokio-rustls = "0.26.4"
-tokio-tungstenite = "0.28.0"
+tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
 tracing = "0.1.43"
 webpki-roots = "1.0.4"
 
