--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ pin-project-lite = "0.2.14"
 [dev-dependencies]
 clap = { version = "4.5", features = ["derive"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+hex = "0.4"
